--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
 REDIS_DIR=/d/Common/data/redis
+
+# Mongo config
+MONGO_HOST=127.0.0.1:27017
+MONGO_DB=myapp
 MONGO_USERNAME=root
 MONGO_PASSWORD=123456
 
